--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <div class="center">
         <img src="https://res.cloudinary.com/df6dcketg/image/upload/v1605073263/Screenshot_2020-07-10_at_5.03.40_PM_kzjr4w.png" alt ="CareerContact Logo with title" width="200px">
-        <h1>Megan's first website!</h1>
+        <h1>Aberforth's forte</h1>
         <p>Hope you are just as excited as we are to deploy your first website</p>
         <p>You can change the picture and add more text here</p>
         </div>
